--- a/lp-neon/index.html
+++ b/lp-neon/index.html
@@ -10,6 +10,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Poppins:wght@400;500;600;700&display=swap"
       rel="stylesheet"
     />
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
     <link rel="stylesheet" href="./css/main.min.css" />
     <title>Projeto - Landing Page Neon</title>
   </head>
@@ -84,5 +88,390 @@
         </div>
       </div>
     </section>
+
+    <section class="s-card-neon">
+      <div class="container">
+        <div class="left-area">
+          <div class="ilustra-mockup">
+            <img src="./img/circle-mockup.svg" class="circle" alt="" />
+            <img src="./img/mockup.svg" class="mockup" alt="" />
+          </div>
+          <div class="text">
+            <div class="icon">
+              <img src="./img/icon-neon.svg" class="icon" alt="" />
+            </div>
+            <div class="info-txt">
+              <h3>Baixe nosso app</h3>
+              <p>
+                Que tal abrir uma conta digital para ver como a gente faz a sua
+                vida muito mais simples?
+              </p>
+              <ul>
+                <li>
+                  <a href="" target="_blank">
+                    <img src="./img/apple-store.svg" alt="" />
+                  </a>
+                </li>
+                <li>
+                  <a href="" target="_blank">
+                    <img src="./img/google-play.svg" alt="" />
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <div class="right-area">
+          <div class="main-text">
+            <h2>Resolva sua vida direto pelo app Neon!</h2>
+            <ul>
+              <li>
+                <div class="info">
+                  <img
+                    src="./img/icon-cartao-credito.svg"
+                    class="icon"
+                    alt=""
+                  />
+                  <div class="txt">
+                    <h3>Cartão de crédito sem anuidade</h3>
+                    <p>
+                      Conta digital com cartão de crédito sem anuidade e sem
+                      complicação
+                    </p>
+                  </div>
+                </div>
+                <img src="./img/arrow-right.svg" alt="" />
+              </li>
+              <li>
+                <div class="info">
+                  <img src="./img/icon-taxas.svg" class="icon" alt="" />
+                  <div class="txt">
+                    <h3>Sem taxas</h3>
+                    <p>
+                      Transferências, boletos de depósito e outros serviços
+                      gratuitos
+                    </p>
+                  </div>
+                </div>
+                <img src="./img/arrow-right.svg" alt="" />
+              </li>
+              <li>
+                <div class="info">
+                  <img src="./img/icon-investimentos.svg" class="icon" alt="" />
+                  <div class="txt">
+                    <h3>Mais investimentos</h3>
+                    <p>
+                      Rendem mais que a poupança e você resgata quando quiser
+                    </p>
+                  </div>
+                </div>
+                <img src="./img/arrow-right.svg" alt="" />
+              </li>
+            </ul>
+            <a href="" class="btn">Conheça outros produtos</a>
+          </div>
+          <div class="box-card">
+            <div class="text">
+              <h2>Neon Pejota</h2>
+              <h3>Contas digitais PJ gratuitas para decolar seu negócio!</h3>
+              <p>
+                As melhores contas para fazer pagamentos, compras e receber dos
+                seus clientes.
+              </p>
+              <div class="btns">
+                <button class="btn-primary">Sou MEI</button>
+                <button class="btn-primary">Sou ME</button>
+              </div>
+            </div>
+            <img src="./img/card-front-pj.svg" class="image" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="s-depoimentos">
+      <div class="container">
+        <div class="top">
+          <h2>
+            <span>Prático, fácil, moderno</span>Você resolve tudo sem estresse
+            😊
+          </h2>
+          <div class="swiper-pagination"></div>
+        </div>
+        <div class="slide-depoimentos">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <div class="card-depoimentos">
+                <div class="user">
+                  <strong>@marciogurka</strong>
+                  <img src="./img/icon-twiiter.svg" alt="Ícone twitter" />
+                </div>
+                <p>
+                  Valeu @banconenon! Linda embalagem e o cartão tbm é lindo!
+                  Muito amor por esse banco #bancoNeon
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card-depoimentos">
+                <div class="user">
+                  <strong>@kleriene18</strong>
+                  <img src="./img/icon-twiiter.svg" alt="Ícone twitter" />
+                </div>
+                <p>
+                  Eu uso o Neon pra render o pouquinho que eu tenho. Como disse
+                  minha amiga Bruna, um dia eu abro o app de novo e PA: tô rica.
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card-depoimentos">
+                <div class="user">
+                  <strong>@mzltweet</strong>
+                  <img src="./img/icon-twiiter.svg" alt="Ícone twitter" />
+                </div>
+                <p>
+                  Só por ter um cartão virtual com bloqueio fácil no app, já
+                  ganha e muito na segurançã pro cliente.
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card-depoimentos">
+                <div class="user">
+                  <strong>@mzltweet</strong>
+                  <img src="./img/icon-twiiter.svg" alt="Ícone twitter" />
+                </div>
+                <p>
+                  Só por ter um cartão virtual com bloqueio fácil no app, já
+                  ganha e muito na segurançã pro cliente.
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card-depoimentos">
+                <div class="user">
+                  <strong>@mzltweet</strong>
+                  <img src="./img/icon-twiiter.svg" alt="Ícone twitter" />
+                </div>
+                <p>
+                  Só por ter um cartão virtual com bloqueio fácil no app, já
+                  ganha e muito na segurançã pro cliente.
+                </p>
+              </div>
+            </div>
+            <div class="swiper-slide">
+              <div class="card-depoimentos">
+                <div class="user">
+                  <strong>@mzltweet</strong>
+                  <img src="./img/icon-twiiter.svg" alt="Ícone twitter" />
+                </div>
+                <p>
+                  Só por ter um cartão virtual com bloqueio fácil no app, já
+                  ganha e muito na segurançã pro cliente.
+                </p>
+              </div>
+            </div>
+          </div>
+          <div class="swiper-pagination"></div>
+        </div>
+      </div>
+    </section>
+
+    <section class="s-conta-digital">
+      <div class="container">
+        <div class="text">
+          <h2>
+            <span>Aproveite</span>Domine o seu dinheiro com uma conta 100%
+            digital
+          </h2>
+          <ul>
+            <li>
+              <div class="icon">
+                <img src="./img/icon-cartao-internacional.svg" alt="" />
+              </div>
+              <div class="info">
+                <h4>Cartão visa internacional</h4>
+                <p>Tenha facilidades e benefícios para o seu dia a dia.</p>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <img src="./img/icon-taxa-zero.svg" alt="" />
+              </div>
+              <div class="info">
+                <h4>Zero mensalidade e anuidade</h4>
+                <p>Não gaste grana pagando taxas desnecessárias.</p>
+              </div>
+            </li>
+            <li>
+              <div class="icon">
+                <img src="./img/icon-poupanca.svg" alt="" />
+              </div>
+              <div class="info">
+                <h4>Investimento que rende mais que a poupança</h4>
+                <p>Invista o seu dinheiro de maneira mais rentável.</p>
+              </div>
+            </li>
+          </ul>
+          <button class="btn-primary">Abra sua conta digital</button>
+        </div>
+        <div class="image">
+          <img src="./img/mockup-01.svg" class="mockup-01" alt="" />
+          <img src="./img/mockup-02.png" class="mockup-02" alt="" />
+          <img src="./img/circle-conta-digital.svg" class="circle" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <footer>
+      <div class="container">
+        <div class="top">
+          <img src="./img/logo.svg" alt="" />
+          <div class="share">
+            <span>Acompanhe nas redes</span>
+            <ul>
+              <li>
+                <a href="">
+                  <img src="./img/youtube.svg" alt="" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./img/linkedin.svg" alt="" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./img/facebook.svg" alt="" />
+                </a>
+              </li>
+              <li>
+                <a href="">
+                  <img src="./img/twitter-white.svg" alt="" />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+        <div class="main">
+          <nav>
+            <div class="item">
+              <strong>Produtos Neon</strong>
+              <ul>
+                <li>
+                  <a href="">Cartão de crédito</a>
+                </li>
+                <li>
+                  <a href="">Cartão pré-pago</a>
+                </li>
+                <li>
+                  <a href="">Neon Mais</a>
+                </li>
+                <li>
+                  <a href="">Investimentos</a>
+                </li>
+                <li>
+                  <a href="">Empréstimos</a>
+                </li>
+              </ul>
+            </div>
+            <div class="item">
+              <strong>Conta digital PJ</strong>
+              <ul>
+                <li>
+                  <a href="">Sou MEI</a>
+                </li>
+                <li>
+                  <a href="">Sou ME</a>
+                </li>
+              </ul>
+            </div>
+            <div class="item">
+              <strong>Blog</strong>
+              <ul>
+                <li>
+                  <a href="">#focanodinheiro</a>
+                </li>
+                <li>
+                  <a href="">O poder da comunidade</a>
+                </li>
+                <li>
+                  <a href="">Desafio das 52 semanas</a>
+                </li>
+                <li>
+                  <a href="">Planilha de gastos</a>
+                </li>
+              </ul>
+            </div>
+            <div class="item">
+              <strong>Institucional</strong>
+              <ul>
+                <li>
+                  <a href="">Conheça a Neon</a>
+                </li>
+                <li>
+                  <a href="">Trabalhe conosco</a>
+                </li>
+                <li>
+                  <a href="">Termos de uso</a>
+                </li>
+                <li>
+                  <a href="">Políticas de privacidade</a>
+                </li>
+              </ul>
+            </div>
+            <div class="item">
+              <strong>Ajuda</strong>
+              <ul>
+                <li>
+                  <a href="">Ouvidoria</a>
+                </li>
+                <li>
+                  <a href="">Fale conosco</a>
+                </li>
+              </ul>
+            </div>
+          </nav>
+          <div class="btns">
+            <button>
+              <img src="./img/envelope.svg" alt="" />
+              <div class="info">
+                <strong>Atendimento</strong>
+                <span>oi@neon.com.br (24 horas)</span>
+              </div>
+            </button>
+            <button>
+              <img src="./img/chat.svg" alt="" />
+              <div class="info">
+                <strong>Imprensa</strong>
+                <span>imprensa@neon.com.br</span>
+              </div>
+            </button>
+          </div>
+        </div>
+        <div class="msg">
+          <div class="icon">😄</div>
+          <p>
+            Oi! Leu até aqui? Você se preocupa com os mínimos detalhes, mesmo. A
+            gente também. Por isso o time Neon está sempre trabalhando para
+            fazer a conta digital perfeita para você. ;)
+          </p>
+        </div>
+      </div>
+    </footer>
+
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+
+    <script>
+      var swiper = new Swiper('.slide-depoimentos', {
+        slidesPerView: 3,
+        spaceBetween: 32,
+        pagination: {
+          el: '.s-depoimentos .top .swiper-pagination',
+          clickable: true
+        }
+      })
+    </script>
   </body>
 </html>
