--- a/lp-neon/index.html
+++ b/lp-neon/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="./img/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,8 +15,48 @@
       rel="stylesheet"
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/main.min.css" />
-    <title>Projeto - Landing Page Neon</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Redesign Landing Page NEON</title>
+    <meta name="title" content="Redesign Landing Page NEON" />
+    <meta
+      name="description"
+      content="A conta digital certa para cuidar bem do seu dinheiro "
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://lp-neon-murilopiresalves.netlify.app/"
+    />
+    <meta property="og:title" content="Redesign Landing Page NEON" />
+    <meta
+      property="og:description"
+      content="A conta digital certa para cuidar bem do seu dinheiro "
+    />
+    <meta
+      property="og:image"
+      content="https://lp-neon-murilopiresalves.netlify.app/share-img.png"
+    />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://lp-neon-murilopiresalves.netlify.app/"
+    />
+    <meta property="twitter:title" content="Redesign Landing Page NEON" />
+    <meta
+      property="twitter:description"
+      content="A conta digital certa para cuidar bem do seu dinheiro "
+    />
+    <meta
+      property="twitter:image"
+      content="https://lp-neon-murilopiresalves.netlify.app/share-img.png"
+    />
   </head>
   <body>
     <header>
@@ -32,13 +73,17 @@
             <li><a href="">Ajuda</a></li>
           </ul>
           <button class="btn-secundary white">Abra sua conta digital</button>
+
+          <button class="btn-mobile">
+            <img src="./img/btn-mobile.svg" alt="" />
+          </button>
         </nav>
       </div>
     </header>
 
     <section class="s-hero">
       <div class="container">
-        <div class="text">
+        <div class="text" data-aos="fade-right">
           <h3>Abra sua conta, é só baixar o app!</h3>
           <h1>A conta digital certa pra cuidar bem do seu dinheiro</h1>
           <button class="btn-primary">Abra sua conta digital</button>
@@ -79,8 +124,8 @@
           </ul>
         </div>
         <div class="area-image">
-          <h2>Banco 100% digital</h2>
-          <div class="image">
+          <h2 data-aos="fade-left">Banco 100% digital</h2>
+          <div class="image" data-aos="zoom-in">
             <img src="./img/card-neon-frnt.png" class="card-front" alt="" />
             <img src="./img/card-neon-back.png" class="card-back" alt="" />
             <img src="./img/circle-cards-neon.svg" class="circle" alt="" />
@@ -93,10 +138,20 @@
       <div class="container">
         <div class="left-area">
           <div class="ilustra-mockup">
-            <img src="./img/circle-mockup.svg" class="circle" alt="" />
-            <img src="./img/mockup.svg" class="mockup" alt="" />
+            <img
+              src="./img/circle-mockup.svg"
+              class="circle"
+              data-aos="fade-left"
+              alt=""
+            />
+            <img
+              src="./img/mockup.svg"
+              class="mockup"
+              data-aos="flip-left"
+              alt=""
+            />
           </div>
-          <div class="text">
+          <div class="text" data-aos="fade-up">
             <div class="icon">
               <img src="./img/icon-neon.svg" class="icon" alt="" />
             </div>
@@ -122,7 +177,7 @@
           </div>
         </div>
         <div class="right-area">
-          <div class="main-text">
+          <div class="main-text" data-aos="fade-left">
             <h2>Resolva sua vida direto pelo app Neon!</h2>
             <ul>
               <li>
@@ -170,7 +225,7 @@
             </ul>
             <a href="" class="btn">Conheça outros produtos</a>
           </div>
-          <div class="box-card">
+          <div class="box-card" data-aos="fade-left">
             <div class="text">
               <h2>Neon Pejota</h2>
               <h3>Contas digitais PJ gratuitas para decolar seu negócio!</h3>
@@ -191,14 +246,14 @@
 
     <section class="s-depoimentos">
       <div class="container">
-        <div class="top">
+        <div class="top" data-aos="fade-right">
           <h2>
             <span>Prático, fácil, moderno</span>Você resolve tudo sem estresse
             😊
           </h2>
           <div class="swiper-pagination"></div>
         </div>
-        <div class="slide-depoimentos">
+        <div class="slide-depoimentos" data-aos="fade-up">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="card-depoimentos">
@@ -260,18 +315,6 @@
                 </p>
               </div>
             </div>
-            <div class="swiper-slide">
-              <div class="card-depoimentos">
-                <div class="user">
-                  <strong>@mzltweet</strong>
-                  <img src="./img/icon-twiiter.svg" alt="Ícone twitter" />
-                </div>
-                <p>
-                  Só por ter um cartão virtual com bloqueio fácil no app, já
-                  ganha e muito na segurançã pro cliente.
-                </p>
-              </div>
-            </div>
           </div>
           <div class="swiper-pagination"></div>
         </div>
@@ -280,7 +323,7 @@
 
     <section class="s-conta-digital">
       <div class="container">
-        <div class="text">
+        <div class="text" data-aos="fade-right">
           <h2>
             <span>Aproveite</span>Domine o seu dinheiro com uma conta 100%
             digital
@@ -317,9 +360,24 @@
           <button class="btn-primary">Abra sua conta digital</button>
         </div>
         <div class="image">
-          <img src="./img/mockup-01.svg" class="mockup-01" alt="" />
-          <img src="./img/mockup-02.png" class="mockup-02" alt="" />
-          <img src="./img/circle-conta-digital.svg" class="circle" alt="" />
+          <img
+            src="./img/mockup-01.svg"
+            data-aos="fade-up"
+            class="mockup-01"
+            alt=""
+          />
+          <img
+            src="./img/mockup-02.png"
+            data-aos="fade-down"
+            class="mockup-02"
+            alt=""
+          />
+          <img
+            src="./img/circle-conta-digital.svg"
+            data-aos="zoom-in"
+            class="circle"
+            alt=""
+          />
         </div>
       </div>
     </section>
@@ -462,6 +520,7 @@
     </footer>
 
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
     <script>
       var swiper = new Swiper('.slide-depoimentos', {
@@ -470,7 +529,26 @@
         pagination: {
           el: '.s-depoimentos .top .swiper-pagination',
           clickable: true
+        },
+        breakpoints: {
+          320: {
+            slidesPerView: 1.3,
+            spaceBetween: 16
+          },
+          600: {
+            slidesPerView: 2.3,
+            spaceBetween: 15
+          },
+          1200: {
+            slidesPerView: 3,
+            spaceBetween: 32
+          }
         }
+      })
+
+      AOS.init({
+        duration: 1000,
+        once: true
       })
     </script>
   </body>
